vue 在GitHub 加载过慢，去掉vue

--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Fzb</title>
+    <link type="text/css" rel="stylesheet" href="css/index.css"/>
 </head>
 <body>
-    <div id="app">
-        {{msg}}
+    <div class="login-wrap">
+        <h3 class="fy">Fy,打造属于自已的专属</h3>
+        <div class="pos-relative login-main">
+            <div class="align-center logo-man">
+                <img src="images/man.jpg"/>
+                <h6 class="man-name">fzb</h6>
+                <p class="man-tip">我是你的专属阁主</p>
+            </div>
+            <div class="form-row">
+                <p class="title">用户名：</p>
+                <input class="write-area" type="text" placeholder="请输入用户名">
+            </div>
+            <div class="form-row">
+                <p class="title">专密码：</p>
+                <input class="write-area" type="text" placeholder="请输入专密码">
+            </div>
+            <div class="form-row">
+                <p class="title">验证码：</p>
+                <input class="write-area" type="text" placeholder="请输入验证码">
+            </div>
+            <div class="friend-link">
+                <span class="icon one"></span>
+                <span class="icon two"></span>
+                <span class="icon three"></span>
+                <span class="icon four"></span>
+            </div>
+        </div>
     </div>
-    <script src="./output/bundle.js"></script>
 </body>
 </html>
