添加确定按钮

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <p class="title">验证码：</p>
                 <input class="write-area" type="text" placeholder="请输入验证码">
             </div>
+            <div class="align-center login-options">
+                <div class="login-btn">登录</div>
+            </div>
             <div class="friend-link">
                 <span class="icon one"></span>
                 <span class="icon two"></span>
