--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
             </div>
             <div class="form-row">
                 <p class="title">用户名：</p>
-                <input class="write-area" type="text" placeholder="请输入用户名">
+                <input class="write-area user-name" type="text" placeholder="请输入用户名">
             </div>
             <div class="form-row">
                 <p class="title">专密码：</p>
-                <input class="write-area" type="text" placeholder="请输入专密码">
+                <input class="write-area user-password" type="password" placeholder="请输入专属密码">
             </div>
             <div class="form-row">
                 <p class="title">验证码：</p>
-                <input class="write-area" type="text" placeholder="请输入验证码">
+                <input class="write-area user-verify" type="text" placeholder="请输入验证码">
             </div>
             <div class="align-center login-options">
-                <div class="login-btn">登录</div>
+                <div class="login-btn sure-login">登录</div>
             </div>
             <div class="friend-link">
                 <span class="icon one"></span>
@@ -36,6 +36,10 @@
                 <span class="icon four"></span>
             </div>
         </div>
+        <div class="copyright">
+            <p> © 2017 专属机构 . All rights reserved | Design by fzb</p>
+        </div>
     </div>
+<script src="js/index.js"></script>
 </body>
 </html>
